package org.example.sample5.model;


import lombok.Data;
import lombok.*;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Sample5Domain {
    private java.lang.String id;
    private java.lang.String v1;
    private java.lang.String v2;
    private java.lang.String v3;
}
