package org.example.sample5.model;


import lombok.Data;
import lombok.*;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Sample5Dto3 {
    private java.lang.String id;
    private java.lang.String v3;
}
